Adding in an example and working on output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(Habari)
 
 cmake_minimum_required(3.1)
 
+option(HABARI_BUILD_EXAMPLE OFF)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -12,3 +14,9 @@ set(SOURCES
 )
 
 add_library(Habari STATIC ${SOURCES})
+
+if (HABARI_BUILD_EXAMPLE)
+	set(EXAMPLE_SOURCES example/Example.cpp)
+
+	add_executable(Habari-example ${EXAMPLE_SOURCES})
+endif()
